parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    COMILLAS
    COMILLASIMPLE
    CORCHETE_ABRE
    CORCHETE_CIERRA
    DOUBLE
    ESPBARRAINVERTIVA
    ESPCOMILLAS
    ESPCOMILLASIMPLE
    ESPLINEA
    ESPRETORNO
    ESPTAB
    FUNC
    HOLA
    INT
    LENGTH
    NEW
    NULL
    PRINT
    READ
    RETURN
    STRING
    TOLOWER
    TOUPPER

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> instruccion
Rule 2     instruccion -> MAIN PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE bloque LLAVE_CIERRA
Rule 3     bloque -> variables bloque
Rule 4     bloque -> variables
Rule 5     bloque -> if bloque
Rule 6     bloque -> if
Rule 7     bloque -> ifelse bloque
Rule 8     bloque -> ifelse
Rule 9     bloque -> difelseif bloque
Rule 10    bloque -> difelseif
Rule 11    bloque -> switch bloque
Rule 12    bloque -> switch
Rule 13    bloque -> while bloque
Rule 14    bloque -> while
Rule 15    bloque -> for bloque
Rule 16    bloque -> for
Rule 17    variables -> VAR IDENTIFICADOR finInstruccion
Rule 18    variables -> VAR IDENTIFICADOR IGUAL expresion finInstruccion
Rule 19    variables -> IDENTIFICADOR IGUAL expresion finInstruccion
Rule 20    variables -> IDENTIFICADOR IGUAL incremento finInstruccion
Rule 21    incremento -> INCREMENTO
Rule 22    incremento -> DECREMENTO
Rule 23    expresion -> expresion MAS expresion
Rule 24    expresion -> expresion MENOS expresion
Rule 25    expresion -> expresion POR expresion
Rule 26    expresion -> expresion DIV expresion
Rule 27    expresion -> expresion POT expresion
Rule 28    expresion -> expresion MODULO expresion
Rule 29    expresion -> expresion IGUALACION expresion
Rule 30    expresion -> expresion DIREFENCIACION expresion
Rule 31    expresion -> expresion MAYORQ expresion
Rule 32    expresion -> expresion MENORQ expresion
Rule 33    expresion -> expresion MAYORIGUAL expresion
Rule 34    expresion -> expresion MENORIGUAL expresion
Rule 35    expresion -> MENOS expresion
Rule 36    expresion -> NOT expresionl
Rule 37    expresion -> ENTERO
Rule 38    expresion -> DECIMAL
Rule 39    expresion -> TRUE
Rule 40    expresion -> FALSE
Rule 41    expresion -> IDENTIFICADOR
Rule 42    expresion -> CADENA
Rule 43    expresion -> CHART
Rule 44    expresionl -> TRUE
Rule 45    expresionl -> FALSE
Rule 46    expresionl -> IDENTIFICADOR
Rule 47    if -> IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
Rule 48    condiciones -> condiciones IGUALACION condiciones
Rule 49    condiciones -> condiciones DIREFENCIACION condiciones
Rule 50    condiciones -> condiciones MAYORQ condiciones
Rule 51    condiciones -> condiciones MENORQ condiciones
Rule 52    condiciones -> condiciones MAYORIGUAL condiciones
Rule 53    condiciones -> condiciones MENORIGUAL condiciones
Rule 54    condiciones -> condiciones AND condiciones
Rule 55    condiciones -> condiciones OR condiciones
Rule 56    condiciones -> condiciones MAS condiciones
Rule 57    condiciones -> condiciones MENOS condiciones
Rule 58    condiciones -> condiciones POR condiciones
Rule 59    condiciones -> condiciones DIV condiciones
Rule 60    condiciones -> condiciones POT condiciones
Rule 61    condiciones -> condiciones MODULO condiciones
Rule 62    condiciones -> NOT expresionll
Rule 63    condiciones -> MENOS expresion
Rule 64    condiciones -> PARENTESIS_ABRE condiciones PARENTESIS_CIERRA
Rule 65    expresionll -> TRUE
Rule 66    expresionll -> FALSE
Rule 67    expresionll -> IDENTIFICADOR
Rule 68    condiciones -> ENTERO
Rule 69    condiciones -> DECIMAL
Rule 70    condiciones -> TRUE
Rule 71    condiciones -> FALSE
Rule 72    condiciones -> IDENTIFICADOR
Rule 73    condiciones -> CADENA
Rule 74    condiciones -> CHART
Rule 75    ifelse -> if else
Rule 76    else -> ELSE LLAVE_ABRE LLAVE_CIERRA
Rule 77    difelseif -> if elseif
Rule 78    elseif -> ELSE IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA elseif
Rule 79    elseif -> ELSE IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA else
Rule 80    elseif -> ELSE IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
Rule 81    switch -> SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE cases LLAVE_CIERRA
Rule 82    cases -> CASE expresion DOSPUNTOS break cases
Rule 83    cases -> CASE expresion DOSPUNTOS break default
Rule 84    default -> DEFAULT DOSPUNTOS break
Rule 85    while -> WHILE PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
Rule 86    for -> FOR PARENTESIS_ABRE condicionfor PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
Rule 87    condicionfor -> declaracionfor PTCOMA condiciones PTCOMA actualizacion
Rule 88    declaracionfor -> VAR IDENTIFICADOR IGUAL expresion
Rule 89    declaracionfor -> IDENTIFICADOR IGUAL expresion
Rule 90    declaracionfor -> expresion
Rule 91    actualizacion -> expresion incremento
Rule 92    actualizacion -> <empty>
Rule 93    break -> BREAK finInstruccion
Rule 94    break -> <empty>
Rule 95    finInstruccion -> PTCOMA
Rule 96    finInstruccion -> <empty>

Terminals, with rules where they appear

AND                  : 54
BREAK                : 93
CADENA               : 42 73
CASE                 : 82 83
CHAR                 : 
CHART                : 43 74
COMILLAS             : 
COMILLASIMPLE        : 
CORCHETE_ABRE        : 
CORCHETE_CIERRA      : 
DECIMAL              : 38 69
DECREMENTO           : 22
DEFAULT              : 84
DIREFENCIACION       : 30 49
DIV                  : 26 59
DOSPUNTOS            : 82 83 84
DOUBLE               : 
ELSE                 : 76 78 79 80
ENTERO               : 37 68
ESPBARRAINVERTIVA    : 
ESPCOMILLAS          : 
ESPCOMILLASIMPLE     : 
ESPLINEA             : 
ESPRETORNO           : 
ESPTAB               : 
FALSE                : 40 45 66 71
FOR                  : 86
FUNC                 : 
HOLA                 : 
IDENTIFICADOR        : 17 18 19 20 41 46 67 72 88 89
IF                   : 47 78 79 80
IGUAL                : 18 19 20 88 89
IGUALACION           : 29 48
INCREMENTO           : 21
INT                  : 
LENGTH               : 
LLAVE_ABRE           : 2 47 76 78 79 80 81 85 86
LLAVE_CIERRA         : 2 47 76 78 79 80 81 85 86
MAIN                 : 2
MAS                  : 23 56
MAYORIGUAL           : 33 52
MAYORQ               : 31 50
MENORIGUAL           : 34 53
MENORQ               : 32 51
MENOS                : 24 35 57 63
MODULO               : 28 61
NEW                  : 
NOT                  : 36 62
NULL                 : 
OR                   : 55
PARENTESIS_ABRE      : 2 47 64 78 79 80 81 85 86
PARENTESIS_CIERRA    : 2 47 64 78 79 80 81 85 86
POR                  : 25 58
POT                  : 27 60
PRINT                : 
PTCOMA               : 87 87 95
READ                 : 
RETURN               : 
STRING               : 
SWITCH               : 81
TOLOWER              : 
TOUPPER              : 
TRUE                 : 39 44 65 70
VAR                  : 17 18 88
WHILE                : 85
error                : 

Nonterminals, with rules where they appear

actualizacion        : 87
bloque               : 2 3 5 7 9 11 13 15
break                : 82 83 84
cases                : 81 82
condiciones          : 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 64 78 79 80 87
condicionfor         : 86
declaracionfor       : 87
default              : 83
difelseif            : 9 10
else                 : 75 79
elseif               : 77 78
expresion            : 18 19 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 63 81 82 83 85 88 89 90 91
expresionl           : 36
expresionll          : 62
finInstruccion       : 17 18 19 20 93
for                  : 15 16
if                   : 5 6 75 77
ifelse               : 7 8
incremento           : 20 91
instruccion          : 1
instrucciones        : 0
switch               : 11 12
variables            : 3 4
while                : 13 14

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . instruccion
    (2) instruccion -> . MAIN PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE bloque LLAVE_CIERRA

    MAIN            shift and go to state 3

    instrucciones                  shift and go to state 1
    instruccion                    shift and go to state 2

state 1

    (0) S' -> instrucciones .



state 2

    (1) instrucciones -> instruccion .

    $end            reduce using rule 1 (instrucciones -> instruccion .)


state 3

    (2) instruccion -> MAIN . PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE bloque LLAVE_CIERRA

    PARENTESIS_ABRE shift and go to state 4


state 4

    (2) instruccion -> MAIN PARENTESIS_ABRE . PARENTESIS_CIERRA LLAVE_ABRE bloque LLAVE_CIERRA

    PARENTESIS_CIERRA shift and go to state 5


state 5

    (2) instruccion -> MAIN PARENTESIS_ABRE PARENTESIS_CIERRA . LLAVE_ABRE bloque LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 6


state 6

    (2) instruccion -> MAIN PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE . bloque LLAVE_CIERRA
    (3) bloque -> . variables bloque
    (4) bloque -> . variables
    (5) bloque -> . if bloque
    (6) bloque -> . if
    (7) bloque -> . ifelse bloque
    (8) bloque -> . ifelse
    (9) bloque -> . difelseif bloque
    (10) bloque -> . difelseif
    (11) bloque -> . switch bloque
    (12) bloque -> . switch
    (13) bloque -> . while bloque
    (14) bloque -> . while
    (15) bloque -> . for bloque
    (16) bloque -> . for
    (17) variables -> . VAR IDENTIFICADOR finInstruccion
    (18) variables -> . VAR IDENTIFICADOR IGUAL expresion finInstruccion
    (19) variables -> . IDENTIFICADOR IGUAL expresion finInstruccion
    (20) variables -> . IDENTIFICADOR IGUAL incremento finInstruccion
    (47) if -> . IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (75) ifelse -> . if else
    (77) difelseif -> . if elseif
    (81) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE cases LLAVE_CIERRA
    (85) while -> . WHILE PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (86) for -> . FOR PARENTESIS_ABRE condicionfor PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA

    VAR             shift and go to state 15
    IDENTIFICADOR   shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20

    bloque                         shift and go to state 7
    variables                      shift and go to state 8
    if                             shift and go to state 9
    ifelse                         shift and go to state 10
    difelseif                      shift and go to state 11
    switch                         shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14

state 7

    (2) instruccion -> MAIN PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE bloque . LLAVE_CIERRA

    LLAVE_CIERRA    shift and go to state 21


state 8

    (3) bloque -> variables . bloque
    (4) bloque -> variables .
    (3) bloque -> . variables bloque
    (4) bloque -> . variables
    (5) bloque -> . if bloque
    (6) bloque -> . if
    (7) bloque -> . ifelse bloque
    (8) bloque -> . ifelse
    (9) bloque -> . difelseif bloque
    (10) bloque -> . difelseif
    (11) bloque -> . switch bloque
    (12) bloque -> . switch
    (13) bloque -> . while bloque
    (14) bloque -> . while
    (15) bloque -> . for bloque
    (16) bloque -> . for
    (17) variables -> . VAR IDENTIFICADOR finInstruccion
    (18) variables -> . VAR IDENTIFICADOR IGUAL expresion finInstruccion
    (19) variables -> . IDENTIFICADOR IGUAL expresion finInstruccion
    (20) variables -> . IDENTIFICADOR IGUAL incremento finInstruccion
    (47) if -> . IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (75) ifelse -> . if else
    (77) difelseif -> . if elseif
    (81) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE cases LLAVE_CIERRA
    (85) while -> . WHILE PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (86) for -> . FOR PARENTESIS_ABRE condicionfor PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA

    LLAVE_CIERRA    reduce using rule 4 (bloque -> variables .)
    VAR             shift and go to state 15
    IDENTIFICADOR   shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20

    variables                      shift and go to state 8
    bloque                         shift and go to state 22
    if                             shift and go to state 9
    ifelse                         shift and go to state 10
    difelseif                      shift and go to state 11
    switch                         shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14

state 9

    (5) bloque -> if . bloque
    (6) bloque -> if .
    (75) ifelse -> if . else
    (77) difelseif -> if . elseif
    (3) bloque -> . variables bloque
    (4) bloque -> . variables
    (5) bloque -> . if bloque
    (6) bloque -> . if
    (7) bloque -> . ifelse bloque
    (8) bloque -> . ifelse
    (9) bloque -> . difelseif bloque
    (10) bloque -> . difelseif
    (11) bloque -> . switch bloque
    (12) bloque -> . switch
    (13) bloque -> . while bloque
    (14) bloque -> . while
    (15) bloque -> . for bloque
    (16) bloque -> . for
    (76) else -> . ELSE LLAVE_ABRE LLAVE_CIERRA
    (78) elseif -> . ELSE IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA elseif
    (79) elseif -> . ELSE IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA else
    (80) elseif -> . ELSE IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (17) variables -> . VAR IDENTIFICADOR finInstruccion
    (18) variables -> . VAR IDENTIFICADOR IGUAL expresion finInstruccion
    (19) variables -> . IDENTIFICADOR IGUAL expresion finInstruccion
    (20) variables -> . IDENTIFICADOR IGUAL incremento finInstruccion
    (47) if -> . IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (75) ifelse -> . if else
    (77) difelseif -> . if elseif
    (81) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE cases LLAVE_CIERRA
    (85) while -> . WHILE PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (86) for -> . FOR PARENTESIS_ABRE condicionfor PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA

    LLAVE_CIERRA    reduce using rule 6 (bloque -> if .)
    ELSE            shift and go to state 26
    VAR             shift and go to state 15
    IDENTIFICADOR   shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20

    if                             shift and go to state 9
    bloque                         shift and go to state 23
    else                           shift and go to state 24
    elseif                         shift and go to state 25
    variables                      shift and go to state 8
    ifelse                         shift and go to state 10
    difelseif                      shift and go to state 11
    switch                         shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14

state 10

    (7) bloque -> ifelse . bloque
    (8) bloque -> ifelse .
    (3) bloque -> . variables bloque
    (4) bloque -> . variables
    (5) bloque -> . if bloque
    (6) bloque -> . if
    (7) bloque -> . ifelse bloque
    (8) bloque -> . ifelse
    (9) bloque -> . difelseif bloque
    (10) bloque -> . difelseif
    (11) bloque -> . switch bloque
    (12) bloque -> . switch
    (13) bloque -> . while bloque
    (14) bloque -> . while
    (15) bloque -> . for bloque
    (16) bloque -> . for
    (17) variables -> . VAR IDENTIFICADOR finInstruccion
    (18) variables -> . VAR IDENTIFICADOR IGUAL expresion finInstruccion
    (19) variables -> . IDENTIFICADOR IGUAL expresion finInstruccion
    (20) variables -> . IDENTIFICADOR IGUAL incremento finInstruccion
    (47) if -> . IF PARENTESIS_ABRE condiciones PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (75) ifelse -> . if else
    (77) difelseif -> . if elseif
    (81) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE cases LLAVE_CIERRA
    (85) while -> . WHILE PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA
    (86) for -> . FOR PARENTESIS_ABRE condicionfor PARENTESIS_CIERRA LLAVE_ABRE LLAVE_CIERRA

    LLAVE_CIERRA    reduce using rule 8 (bloque -> ifelse .)
    VAR             shift and go to state 15
    IDENTIFICADOR   shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20

    ifelse                         shift and go to state 10
    bloque                         shift and go to state 27
    variables                      shift and go to state 8
    if                             shift and go to state 9
    difelseif                      shift and go to state 11
    switch                         shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14

state 11
